# opday.dev

./: .env  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.override-run.prod.yaml  docker-compose.yaml  opday.toml
.github/workflows/: deploy.yml
opday-dev/: Cargo.toml  Dockerfile
opday-dev/migrations/: V1__init.sql
opday-dev/src/: db.rs  main.rs  model.rs
