[package]
name = "opday-dev"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "opday-dev"
path = "src/main.rs"

[dependencies]
hyper = { version = "1", features = ["http1", "server"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
clap = { version = "4.5.3", features = ["derive"] }
log = "0.4.21"
env_logger = "0.11.3"
tokio-postgres = { version = "0.7.10", features = ["with-uuid-1"] }
async-std = { version = "1.12.0", features = ["attributes"]}
uuid = { version = "1.8.0", features = ["v4"] }
warp = "0.3"
serde_derive = "1.0.197"
serde = "1.0.197"
axum = { version = "0.7.5", features = ["multipart", "macros"] }
bb8-postgres = { version = "0.8.1", features = ["with-uuid-1"] }
bb8 = "0.8.3"

[dev-dependencies]
cargo-watch = "8.5.2"
rstest = "0.18.2"
