[package]
name = "opday-dev"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "opday-dev"
path = "src/main.rs"

[dependencies]
# web server
hyper = { version = "1", features = ["http1", "server"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7.5", features = ["multipart", "macros"] }
tower = { version = "0.4.13", default-features = false, features = ["util"] }
tower-layer = "0.3.2"
tower-service = "0.3"
# postgres
tokio-postgres = { version = "0.7.10", features = ["with-uuid-1"] }
bb8-postgres = { version = "0.8.1", features = ["with-uuid-1"] }
bb8 = "0.8.3"
# misc
clap = { version = "4.5.3", features = ["derive"] }
log = "0.4.21"
env_logger = "0.11.3"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
serde_derive = "1.0.197"
serde = "1.0.197"
serde_json = "1.0.115"
http-body-util = "0.1.1"

[dev-dependencies]
rstest = "0.18.2"
